CLI gebastelt und eine ausführbare JAR-File erstellt